<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cygnature</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up">New User? Register Here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="username">Email</string>
    <string name="pass">Password</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="LoginButton">Login</string>
    <string name="FORGOTPASS">Forgot Password?</string>
    <string name="SignUpButton">Signup</string>
    <string name="LOgintv">Login In to your Account</string>
    <string name="action_settings">Action Settings</string>
    <string name="forgot">Forgot Password?</string>
    <string name="Email">Enter email</string>
    <string name="reset">Reset Password</string>
    <string name="img_description">logo_of_cygnature</string>
    <string name="enter_email">Enter your email address and we will send you a password reset link.</string>
    <string name="splash_image">cygnature</string>
    <string name="hint">enter email</string>
    <string name="awatingsign">Awating My Sign</string>
    <string name="awatingothers">Awating Others</string>
    <string name="completed">Completed</string>
    <string name="signingdue">Due Soon</string>
    <string name="awsdata">0</string>
    <string name="addsign">Edit/Add Signature</string>
    <string name="addsigng">Add Signature</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="edit_your_signature">Edit Your Signature</string>
    <string name="dashboard">Dashboard</string>
    <string name="documents">Documents</string>
    <string name="editsign">EditSignature</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="headername">Rishabh Mistry</string>
    <string name="emailheader">rishabh9099@gmail.com</string>
    <string name="OTP">Enter OTP</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="drawsig">Draw Signature</string>
    <string name="takepic">Take Photo</string>
    <string name="Register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="AlreadyRegister">Already Registered? Log In</string>
    <string name="fname">First Name*</string>
    <string name="lname">Last Name*</string>
    <string name="EmailId">Email Id*</string>
    <string name="phone">Mobile No*</string>
    <string name="passwd">Password*</string>
    <string name="cpasswd">Confirm Password*</string>
    <string name="company_name">Company Name</string>
    <string name="country_id">Country Id</string>
    <string name="aw_sign">Awaiting My Sign</string>
    <string name="button_clear">clear</string>
    <string name="savebutton">Save</string>
    <string name="choose">Select Photo</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="signature">Signature</string>
    <string name="upload">Upload Document</string>
    <string name="CurrentPage">1</string>
    <string name="devide">/</string>
    <string name="total">2</string>
    <string name="Declined">Declined</string>


    <!-- Profile Page Strings-->
    <string name="prf_title">Profile</string>
    <string name="Username">Robert Downey</string>
    <string name="Signature">Signature</string>
    <string name="useremail">robertdownyjr89@gmail.com</string>
    <string name="Info">Info</string>
    <string name="mail_image">Mail Image</string>
    <string name="profession">Profession:</string>
    <string name="profession_value">Android Developer</string>
    <string name="Company">Company:</string>
    <string name="Company_value">Cygnet</string>
    <string name="Phone">Phone:</string>
    <string name="Phone_value">9865457825</string>
    <string name="contact_name">Juhi</string>
    <string name="SaveContact">Save Contact</string>
    <string-array name="names">
        <item>pooja</item>
        <item>juhi</item>
        <item>dhruv</item>
        <item>yogita</item>
    </string-array>
    <string name="notification_title">Notifications</string>
    <string name="MobileNo">Mobile No</string>
    <string name="JobTitle">JobTitle</string>
    <string name="JobDescription">Job Description</string>
    <string name="Search">Search</string>
    <string name="CreateContact">Create Contact</string>
    <string name="CountryCode">Code</string>
    <string name="Contacts">Contacts</string>
    <string name="Add">Add</string>
    <string name="CreateGroup">Create Group</string>
    <string name="edit_title">Edit Profile</string>
    <string name="Image_des">User_image</string>
    <string name="First_Name">First Name*</string>
    <string name="Last_Name">Last Name*</string>
    <string name="Email_Address">Email Address*</string>
    <string name="Mobile_No">Mobile No*</string>
    <string name="Job_Title">Job Title</string>
    <string name="Organization">Organization</string>
    <string name="Date_Of_Birth">Date Of Birth</string>
    <string name="Gender">Gender</string>
    <string name="Description">Description</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="password">Password</string>
    <string name="My_account">My Account</string>
    <string name="Change_Password">Change Password</string>
    <string name="Logout">Logout</string>
    <string name="Current">Current Password</string>
    <string name="Confirm">Confirm Password</string>
    <string name="New_password">New Password</string>
    <string name="Job_title">Job Title</string>
    <string name="Job_Description">Job Description</string>
    <string name="Name">Name</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="todo">TODO</string>
    <string name="anoteButton">Annote</string>
    <string name="otp">Verify OTP</string>
    <string name="Resendotp">Resend Otp</string>
    <string name="Remembercb">Remember me</string>
    <string name="Loginanther">Have another account?</string>
    <string name="title_activity_dashboarrd">Dashboarrd</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="done">done</string>
    <string name="Loading">Loading…</string>
    <string name="awaiting">Awaiting My Sign</string>
    <string name="next">next</string>
    <string name="previous">previ.</string>
    <string name="uploaded_by">Uploaded By :</string>
    <string name="hash">Document Hash</string>
    <string name="Details">Details</string>
    <string name="copy">Copy</string>
    <string name="fetch">Fetching details…</string>
    <string name="loading_preview">Loading preview…</string>
    <string name="Getting">Getting next pages…</string>
    <string name="preview">Preview</string>
    <string name="signers">Signers</string>
    <string name="sequential">Sequential</string>
    <string name="observers">Observers</string>
    <string name="notarization">Notarization Details</string>
    <string name="notarized_on">Notarized On:</string>
    <string name="transaction_hash">Transaction hash</string>
    <string name="pg">PG</string>
    <string name="uploader_name">Uploader_name</string>
    <string name="time_and_date">time and date</string>
    <string name="thash">hash</string>
    <string name="selectobservers">Select Observers</string>
    <string name="pickDateandtime"><![CDATA[Expiry Date & Time]]></string>
    <string name="picktime">Time</string>
    <string name="ExpireyDate">Expiry Date</string>
    <string name="expirey_date">Expirey Date</string>
    <string name="paralel">Parallel</string>
    <string name="remindbefore">Remind Before</string>
    <string name="id">imageview</string>
    <string name="no_observers">There are no observers</string>
    <string name="not_notarized_message">This Document is yet not Notarized.</string>
    <string name="view_doc">Preview the document</string>
    <string name="no_documents">No Documents</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="refresh_page">Try refreshing the page</string>

    <string name="recent">Recent Documents</string>
    <string name="contact_email">contactemail@gmail.com</string>
    <string name="contact_name_">contact name</string>
    <string name="upload_file">Upload file</string>
    <string name="selectsigners">Select Signers</string>
    <string name="prev">prev</string>
    <string name="nextf">next</string>

    <string name="expirey_end_date">Expiry End Date</string>
    <string name="expirey_start_date">Expiry Start Date</string>
    <string name="Signing_Due_date">Signing Due Date</string>
    <string name="days">Days</string>
    <string name="Zero">0</string>
    <string name="Addc">Add Contact</string>
    <string name="recent_documents">Recent documents</string>
    <string name="Create">Create</string>
    <string name="time">time</string>
    <string name="update_profile">Updating profile</string>
    <string name="verify">Verify</string>
    <string name="alldocs">All documents</string>
    <string name="contact_Mobno">Mobno</string>
    <string name="document_history">Document History</string>

    <string name="recent_documenets">Recent_documents</string>

    <string name="notarization_details">Notarization Details</string>
    <string name="prevd"><![CDATA[<]]></string>
    <string name="nextd"><![CDATA[>]]></string>
    <string name="Retake">Retake</string>
    <string name="title_activity_add_edit_signature">AddEditSignature</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="e_signature">E-Signature</string>
    <string name="button_clearall">Clear All</string>
    <string name="contact_mobile_no">8888888888</string>
    <string name="prevpage"><![CDATA[<]]></string>
    <string name="sign">Sign</string>
    <string name="decline">Decline</string>
    <string name="Previous">Previous</string>
    <string name="sign">Sign</string>


</resources>
