<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/item1"
    android:icon="@color/digitbg"
    android:title="@string/dashboard"/>
    <item
            android:id="@+id/item2"
            android:icon="@color/digitbg"
            android:title="@string/documents"/>
    <item
            android:id="@+id/item3"
            android:icon="@color/digitbg"
            android:title="@string/editsign"/>
    <item
            android:id="@+id/item4"
            android:icon="@color/digitbg"
            android:title="@string/contacts"/>
    <item
            android:id="@+id/item5"
            android:icon="@color/digitbg"
            android:title="@string/settings"/>
    <item
            android:id="@+id/item6"
            android:icon="@color/digitbg"
            android:title="@string/logout"/>
</menu>