<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linear_layoutpopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp50"
        android:padding="@dimen/dp20"
        android:background="@color/design_default_color_surface"
        android:layout_gravity="center"
>



    <TextView android:layout_width="@dimen/dp300"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/dp10"
              android:layout_marginTop="@dimen/dp5"
              android:textAlignment="center"
              android:text="@string/addsign"
              android:padding="@dimen/dp15"
              android:layout_gravity="center"
              android:background="@color/colorPrimary"
              android:textColor="@color/textcolor3"
              android:textSize="@dimen/sp20"
    />

    <Button
            android:width="@dimen/dp100"
            android:height="@dimen/dp50"

            android:layout_marginTop="@dimen/dp10"
            android:id="@+id/draw_signature"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:text="@string/drawsig"
            android:background="@color/textcolor4"
            android:textColor="@color/textcolor"
            android:layout_gravity="center"

    />
    <Button
            android:width="@dimen/dp100"
            android:height="@dimen/dp50"
            android:layout_marginTop="@dimen/dp20"
            android:id="@+id/photobutton"
            android:background="@color/textcolor4"
            android:textColor="@color/textcolor"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:text="@string/takepic"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp20"
    />
    <Button

            android:width="@dimen/dp100"
            android:height="@dimen/dp50"
            android:id="@+id/typebutton"
            android:background="@color/textcolor4"
            android:textColor="@color/textcolor"
            android:layout_width="@dimen/dp200"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp30"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/close"
            android:padding="0dp"
            android:id="@+id/popupcancel"
            android:layout_gravity="right"
    />

</LinearLayout>

