<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/cygnaturelogo"
            android:id="@+id/imageView2"
            android:contentDescription="@string/img_description"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="59dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/reset"
            android:layout_width="176dp"
            android:layout_height="0dp"
            android:id="@+id/textView3"
            android:textSize="24sp"
            android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginBottom="27dp" app:layout_constraintBottom_toTopOf="@+id/editText4"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/OTP"
            android:ems="10"
            android:id="@+id/editText4"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/editText5"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:text="@string/enter_password"
            android:ems="10"
            android:id="@+id/editText5"
            app:layout_constraintStart_toStartOf="@+id/editText4" app:layout_constraintTop_toBottomOf="@+id/editText4"
            android:layout_marginBottom="37dp" app:layout_constraintBottom_toTopOf="@+id/editText7"
            android:importantForAutofill="no" tools:targetApi="o"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/confirm_password"
            android:ems="10"
            android:id="@+id/editText7"
            app:layout_constraintTop_toBottomOf="@+id/editText5" android:layout_marginEnd="1dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintEnd_toEndOf="@+id/editText5" app:layout_constraintBottom_toTopOf="@+id/button4"
            android:importantForAutofill="no" tools:targetApi="o"/>

    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText7"
            android:layout_marginBottom="76dp" app:layout_constraintEnd_toEndOf="@+id/editText7"/>

</androidx.constraintlayout.widget.ConstraintLayout>