<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rootview"
>
    <TextView android:layout_width="101dp" android:layout_height="23dp"
              android:id="@+id/xycoordinates"
              app:layout_constraintStart_toStartOf="@+id/button3"
              app:layout_constraintTop_toTopOf="parent"/>
    <Spinner android:layout_width="@dimen/dp280"
             android:layout_height="43dp"
             android:prompt="@string/selectsigners"
             android:id="@+id/signerspinner"
             app:layout_constraintTop_toBottomOf="@+id/xycoordinates"
             app:layout_constraintStart_toStartOf="@+id/Relativelid"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toStartOf="@+id/button4"
             android:layout_marginEnd="8dp"/>
    <Button android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp40"
            android:text="@string/prev"
            android:textStyle="bold"
            android:textSize="@dimen/sp20"
            android:padding="@dimen/dp0"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_round2"
            android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="252dp"
            app:layout_constraintTop_toBottomOf="@+id/xycoordinates" android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/Relativelid"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp40"
            android:text="@string/nextf"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            android:padding="@dimen/dp0"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_round2"
            android:id="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/Relativelid" android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/button3"/>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.495"
                    android:id="@+id/Relativelid">
        <ImageView android:layout_width="760px" android:layout_height="1078.0487px"
                   android:layout_gravity="center"
                   android:layout_centerVertical="true"
                   android:background="@drawable/edit_round"
                   android:id="@+id/previewdocid"
        />
    </RelativeLayout>
    <Button android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/Add"
            android:background="@drawable/edit_round2"
            android:paddingTop="@dimen/dp20"
            android:paddingBottom="@dimen/dp20"
            android:layout_marginTop="@dimen/dp15"
            app:layout_constraintTop_toBottomOf="@+id/Relativelid" android:id="@+id/addantbutton"
            app:layout_constraintStart_toStartOf="@+id/Relativelid"/>
    <Button android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/button_clear"
            android:background="@drawable/edit_round2"
            android:paddingTop="@dimen/dp20"
            android:id="@+id/clearantbutton"
            android:paddingBottom="@dimen/dp20"
            tools:ignore="RtlHardcoded" app:layout_constraintStart_toEndOf="@+id/addantbutton"
             android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/clearallantbutton"
            app:layout_constraintTop_toTopOf="@+id/addantbutton"/>
    <Button android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/button_clearall"
            android:background="@drawable/edit_round2"
            android:id="@+id/clearallantbutton"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/Relativelid"
            app:layout_constraintTop_toTopOf="@+id/clearantbutton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>