<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditProfile"
            android:minHeight="@dimen/activity_vertical_margin" tools:ignore="ScrollViewSize">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" android:id="@+id/textInputLayout7">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Organization" android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="211dp"
                app:layout_constraintStart_toStartOf="parent"

                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/imageView6" android:contentDescription="@string/img_description"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp">
        </ImageView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera_alt_black_24dp"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="normal"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6" android:id="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.943">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:hint="@string/First_Name"
                    android:id="@+id/first_name"
                    android:inputType="text"
                    android:theme="@style/MyEditText"
                    android:importantForAutofill="no"
                    tools:targetApi="O"
                    android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                android:id="@+id/textInputLayout2"
                android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:hint="@string/Last_Name"
                    android:inputType="text"
                    android:theme="@style/MyEditText"
                    android:importantForAutofill="no"
                    tools:ignore="UnusedAttribute" android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:id="@+id/textInputLayout4"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:hint="@string/Mobile_No"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:theme="@style/MyEditText"
                    tools:targetApi="O"
                    android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:id="@+id/textInputLayout5"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:hint="@string/Job_Title"
                    android:theme="@style/MyEditText"
                    android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:orientation="horizontal"
                android:id="@+id/radio"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout8">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:paddingStart="@dimen/dp30"
                    android:paddingEnd="@dimen/dp30"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp50"
                    android:paddingStart="@dimen/dp30"
                    android:paddingEnd="@dimen/dp30"
                    android:text="@string/Female"/>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:id="@+id/textInputLayout6"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email_Address"
                    android:theme="@style/MyEditText"
                    android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:text="@string/Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15" android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:id="@+id/textInputLayout8" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/radio" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="100dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditText"
                    android:hint="@string/Description" android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

